--- a/pages/classes.html
+++ b/pages/classes.html
@@ -7,11 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Rubik+Dirt&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main>
-        <h1>Welcome to My Web Page</h1>
-        <p>This is a basic HTML page.</p>
-    </main>
-    <header class="hstack">
+    
+    <header class="hstack header">
         <a href="index.html" class="logo">
             <img src="../images/logos/outdoor-adventure-logo-black.svg" alt="Logo">
         </a>
@@ -22,5 +19,39 @@
             <a href="meet-our-team.html" class="nav-item" id="nav-team">Our Team</a>
         </nav>
     </header>
+    <main id = "classes-main">
+        <div class="image-header">
+            <img src="../images/classes-images/header-photo.jpeg" alt="Header Photo" id="header-photo">
+            <h1 class="header-text">Classes</h1>
+        </div>
+        <h2 id = "mission-statement">     Our mission is to connect people deeply with nature through memorable outdoor adventures that inspire a lifelong love and respect for the earth. In order to accomplish this mission, we offer numerous classes which include teaching people how to interact with the outdoors, teaching people risk management,  and teaching people how to deal with medical emergencies in the outdoors.
+        </h2>
+    </main>
+    <div class = "section one">
+        <img src="../images/classes-images/activities.jpeg" alt="Activites">
+        <div>
+            <h3>Activites</h3>
+            <p>In these course you’ll explore a variety of exciting outdoor pursuits while learning the skills and values needed to engage with nature responsibly. This class covers activities such as hiking, camping, rock climbing, and kayaking, and teaches you how to enjoy these adventures while preserving the environment. Following Leave No Trace principles, you’ll develop an understanding of the importance of minimizing your impact on the wilderness. </p>
+        </div>
+    </div>
+    <div class = "section two">
+        <div>
+            <h3>Risk Management</h3>
+            <p>Our Outdoor Risk Management class equips you with essential skills to confidently navigate and manage the unique challenges of outdoor environments. This class covers vital topics such as assessing environmental risks, understanding weather patterns, route planning, and decision-making in remote settings. You’ll learn how to identify potential hazards, develop proactive strategies to prevent accidents, and respond effectively in challenging situations. With a focus on risk assessment techniques and safe group management, this course is ideal for anyone wanting to enjoy the outdoors responsibly while ensuring the safety of themselves and others.</p>
+        </div>
+        <img src="../images/classes-images/risk-management.jpeg" alt="Risk Management">
+    </div>
+    <div class = "section three">
+        <div>
+            <h3>Wilderness First Aid</h3>
+            <p>Learn essential first aid skills tailored for the outdoors. This class covers fundamental techniques to address common injuries and emergencies you may encounter on the trail.
+            </p>
+        </div>
+        <img src="../images/classes-images/firstaid.jpeg" alt="First Aid">
+        <div>
+            <h3>Wilderness First Responder</h3>
+            <p>Gain comprehensive medical training for remote settings. This course teaches advanced first aid and emergency response skills crucial for backcountry and wilderness environments, equipping you to handle prolonged patient care when professional help is far away.</p>
+        </div>
+    </div>
 </body>
 </html>
