--- a/pages/meet-our-team.html
+++ b/pages/meet-our-team.html
@@ -11,7 +11,7 @@
         <h1>Welcome to My Web Page</h1>
         <p>This is a basic HTML page.</p>
     </main>
-    <header class="hstack">
+    <header class="hstack header">
         <a href="index.html" class="logo">
             <img src="../images/logos/outdoor-adventure-logo-black.svg" alt="Logo">
         </a>
